basic site layout

--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Zhocholas</title>
+  <title>frijma</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="index.css" rel="stylesheet" type="text/css" />
   <script src="index.js" type="text/javascript"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;700&display=swap" rel="stylesheet">
   <link href="icons/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
-  <!-- HEADER -->
-  <h1>DubHack22 Project</h1>
-  <!-- END HEADER -->
+  <div id="header">
+    <img id="logo" src="assets/logo.svg" />
+  </div>
 
-  <!-- MAIN CONTENT -->
-  <!-- END MAIN CONTENT -->
+  <section class="container">
 
-  <!-- FOOTER -->
-  <!-- END FOOTER -->
+  </section>
+
+  <div id="footer">
+    <div class="hr"></div>
+    <a href="#header"><img id="footer-logo" src="icons/mango.png" />frijma</a>
+    <a>Made with &hearts;</a>
+  </div>
 </body>
 
 </html>
