--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="index.css" rel="stylesheet" type="text/css" />
   <script src="index.js" type="text/javascript"></script>
+  <script src="tesseract.min.js" type="text/javascript"></script>
   <script src="build/tsc.js" type="text/javascript"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
