added basic visualizer, very scuffed

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
   
   <section id="visualizer">
     <button id="scan-btn">Scan&nbsp;Now</button>
+    <div class="food-item hidden" id="template"> 
+      <h2 class="food-name"></h2>
+      <div class="food-duration-container">
+        <div class="food-duration pantry"></div>
+        <div class="food-duration fridge"></div>
+        <div class="food-duration freezer"></div>
+        <div class="food-duration on_open"></div>
+      </div>
+    </div>
   </section>
 
   <section id="footer">
