--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>frijma</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="index.css" rel="stylesheet" type="text/css" />
-  <script src="tesseract.min.js" type="text/javascript"></script>
+  <script src='https://unpkg.com/tesseract.js@v2.0.0-beta.1/dist/tesseract.min.js'></script>
   <script src="build/tsc.js" type="text/javascript"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,6 +40,9 @@
       </p>
     </div>
   </section>
+  
+  <input id="camera-inp" type="file" accept="image/*", capture/>
+  <p id='textbox'></p>
   
   <section id="visualizer">
     <button id="scan-btn">Scan&nbsp;Now</button>
