ready for mobile test

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </section>
   
   <section id="visualizer">
-    <label class="scan-btn">
-      Scan Now
+    <label id="scan-btn">
+      Scan&nbsp;Now
       <input id="camera-inp" type="file" accept="image/*", capture/>
     </label>
     <div class="food-item hidden" id="template"> 
