--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   <section id="footer">
     <div class="hr"></div>
     <div>
-      <a href="#header"><img id="footer-logo" src="icons/mango.png" />frijma</a>
-      <a>Made with &hearts;</a>
+      <a href="#header"><img class="footer-icon" src="icons/mango.png" />frijma</a>
+      <a>Made with <img class="footer-icon" src="assets/heart.png" /></a>
     </div>
   </section>
 </body>
