--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>frijma</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="index.css" rel="stylesheet" type="text/css" />
+  <script src="https://unpkg.com/jimp@0.14.0/browser/lib/jimp.js"></script>
   <script src='https://unpkg.com/tesseract.js@v2.0.0-beta.1/dist/tesseract.min.js'></script>
   <script src="build/tsc.js" type="text/javascript"></script>
 
