--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </section>
 
   <section id="description">
-    <div>
+    <div style="flex: 1">
       <h1>Why Frijma</h1>
       <p>
         According to the USDA, it is estimated that nearly 40% of the U.S. food supply is wasted every single year.
@@ -31,7 +31,7 @@
         an individual consumer level. That's where frijma comes in.
       </p>
     </div>
-    <div>
+    <div style="flex: 1">
       <h1>How It Works</h1>
       <p>
         By combining computer vision, clever algorithms to reconstruct words from acronyms, and U.S. government food
@@ -39,6 +39,12 @@
         then provide recepies that specifically target the food the user already has, so there is no need to go out to
         the store and buy more when perfectly usable food is available at home!
       </p>
+    </div>
+    <div id="icons">
+      <div class="icon-container"><img class="icon" src="assets/pantry.png"/> Kept&nbsp;in&nbsp;Pantry</div>
+      <div class="icon-container"><img class="icon" src="assets/fridge.png"/> Cooled&nbsp;in&nbsp;Fridge</div>
+      <div class="icon-container"><img class="icon" src="assets/freezer.png"/> Frozen&nbsp;in&nbsp;Freezer</div>
+      <div class="icon-container"><img class="icon" src="assets/on_open.png"/> After&nbsp;Opening</div>
     </div>
   </section>
 
