adding recipe displayer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>
         By combining computer vision, clever algorithms to reconstruct words from acronyms, and U.S. government food
         keeping data, frijma is able to parse any receipt and help users visualize data about their food. Our app can
-        then provide recepies that specifically target the food the user already has, so there is no need to go out to
+        then provide recipes that specifically target the food the user already has, so there is no need to go out to
         the store and buy more when perfectly usable food is available at home!
       </p>
     </div>
