icon & fooditem struct change

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
     <div class="food-item hidden" id="template">
       <h2 class="food-name"></h2>
       <div class="food-duration-container">
-        <div class="food-duration pantry" title="Placed in Pantry"></div>
-        <div class="food-duration fridge" title="Cooled in Fridge"></div>
-        <div class="food-duration freezer" title="Frozen in Freezer"></div>
-        <div class="food-duration on_open" title="Once Opened"></div>
+        <div class="food-duration pantry" title="Placed in pantry"></div>
+        <div class="food-duration on_open_pantry" title="In pantry once opened"></div>
+        <div class="food-duration fridge" title="Cooled in fridge"></div>
+        <div class="food-duration on_open_fridge" title="In fridge once opened"></div>
+        <div class="food-duration freezer" title="Frozen in freezer"></div>
       </div>
     </div>
   </section>
