--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
     </div>
   </section>
 
+  <section id="recipes" class="hidden_">
+    <h2 style="text-align: center;">Your Recipes</h2>
+    <div class="recipe-item hidden_" id="template">
+      <h2>Recipe Title</h2>
+    </div>
+  </section>
+
   <p id='textbox'></p>
 
   <section id="footer">
