image processing is finally working

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
   </section>
 
   <p id='textbox'></p>
+  <img src="" id="debug-img" style="width=100%"/>
+  <img src="" id="debug-img2" style="width=100%"/>
 
   <section id="footer">
     <div class="hr"></div>
