working receipt -> visualization

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
   <section id="recipes" class="hidden_">
     <h2 style="text-align: center;">Your Recipes</h2>
     <div class="recipe-item hidden_" id="template">
-      <h2>Recipe Title</h2>
+      <div class="recipe-title-line">
+        <h2 style="margin-right: 1em;">Recipe Title Here</h2>
+        <img class="icon" src="assets/grain.png"/>
+        <img class="icon" src="assets/vegetable.png"/>
+        <img class="icon" src="assets/meat.png"/>
+      </div>
+      <a class="recipe-url" href="https://www.allrecipes.com/recipe/76296/meat-pie/">Let's Cook!</a>
     </div>
   </section>
 
