addition of raw name

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
   </div>
   <section id="visualizer">
     <div class="food-item hidden" id="template">
-      <h2 class="food-name"></h2>
+      <div class="food-item-title">
+        <h2 class="food-name"></h2>
+        <h3 class="food-raw"></h3>
+      </div>
       <div class="food-duration-container">
         <div class="food-duration pantry" title="Placed in pantry"></div>
         <div class="food-duration on_open_pantry" title="In pantry once opened"></div>
