--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="index.css" rel="stylesheet" type="text/css" />
   <script src="https://unpkg.com/jimp@0.14.0/browser/lib/jimp.js"></script>
   <script src='https://unpkg.com/tesseract.js@v2.0.0-beta.1/dist/tesseract.min.js'></script>
+  <script src='ocrad.js'></script>
   <script src="build/tsc.js" type="text/javascript"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,7 +60,7 @@
     </div>
   </section>
 
-  <p id='textbox'></p>
+  <p id='textbox'>ksdjflasdkjfklsjdflskdfjlsdfjlsdkfj</p>
   <img src="" id="debug-img" style="width=100%"/>
   <img src="" id="debug-img2" style="width=100%"/>
 
