final visual improvements before starting recipe displaying

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </div>
     </div>
     <div id="icons">
+      <h1>Icons Legend</h1>
       <div class="icon-container" style="column-span: all;"><img class="icon" src="assets/question.png" /> How long food
         keeps when:</div>
       <div>
