--- a/index.html
+++ b/index.html
@@ -97,12 +97,16 @@
     <h2 style="text-align: center;">Your Recipes</h2>
     <div class="recipe-item hidden_" id="template">
       <div class="recipe-title-line">
-        <h2 style="margin-right: 1em;">Recipe Title Here</h2>
+        <h2 class="recipe-name">Long Long Recipe Title Here</h2>
         <img class="icon" src="assets/grain.png" />
         <img class="icon" src="assets/vegetable.png" />
         <img class="icon" src="assets/meat.png" />
+        <img class="icon" src="assets/fruit.png" />
+        <img class="icon" src="assets/dairy.png" />
+        <img class="icon" src="assets/default.png" />
       </div>
-      <a class="recipe-url" href="https://www.allrecipes.com/recipe/76296/meat-pie/">Let's Cook!</a>
+      <p>Milk, Eggs, Butter, Carrots, Potatoes...</p>
+      <span><a class="recipe-url" href="https://www.allrecipes.com/recipe/76296/meat-pie/">Let's Cook!</a>&nbsp;(3hrs)</span>
     </div>
   </section>
 
