--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
 
   <section id="visualizer">
-    <div class="food-item hidden" id="template">
+    <div class="food-item hidden" id="food-item-template">
       <div class="food-item-title">
         <h2 class="food-name"></h2>
         <h3 class="food-raw"></h3>
@@ -95,7 +95,7 @@
 
   <section id="recipes" class="hidden_">
     <h2 style="text-align: center;">Your Recipes</h2>
-    <div class="recipe-item hidden_" id="template">
+    <div class="recipe-item hidden_" id="recipe-template">
       <div class="recipe-title-line">
         <h2 class="recipe-name">Long Long Recipe Title Here</h2>
         <img class="icon" src="assets/grain.png" />
