18 hours in, i forgor

--- a/index.html
+++ b/index.html
@@ -93,20 +93,13 @@
     </div>
   </section>
 
-  <section id="recipes" class="hidden_">
+  <section id="recipes" class="">
     <h2 style="text-align: center;">Your Recipes</h2>
-    <div class="recipe-item hidden_" id="recipe-template">
-      <div class="recipe-title-line">
-        <h2 class="recipe-name">Long Long Recipe Title Here</h2>
-        <img class="icon" src="assets/grain.png" />
-        <img class="icon" src="assets/vegetable.png" />
-        <img class="icon" src="assets/meat.png" />
-        <img class="icon" src="assets/fruit.png" />
-        <img class="icon" src="assets/dairy.png" />
-        <img class="icon" src="assets/default.png" />
-      </div>
-      <p>Milk, Eggs, Butter, Carrots, Potatoes...</p>
-      <span><a class="recipe-url" href="https://www.allrecipes.com/recipe/76296/meat-pie/">Let's Cook!</a>&nbsp;(3hrs)</span>
+    <div class="recipe-item" id="recipe-template">
+      <h2 class="recipe-name">Title Goes Here</h2>
+      <p>Potatoe, Geed, List, Ogey</p>
+      <span><a class="recipe-url" href="">Let's Cook!</a>&nbsp;(3hrs)</span>
+      <img class="recipe-img" src="assets/rt1.jpg"/>
     </div>
   </section>
 
