finished recipie display function

--- a/index.html
+++ b/index.html
@@ -46,13 +46,41 @@
         <img id="demo-img" src="assets/receipt.png" />
         &rarr;
         <div id="demo-grid">
-          <p>NAME&nbsp;</p><p>ID#&nbsp;</p><p>AMNT&nbsp;</p><p>DSC&nbsp;</p><p>PRC</p>
-          <p>APPL</p><p>31240686</p><p>9</p><p>NO</p><p>2.99</p>
-          <p>CRT</p><p>10465239</p><p>12</p><p>NO</p><p>1.99</p>
-          <p>MARGRN</p><p>17823649</p><p>1</p><p>NO</p><p>6.29</p>
-          <p>MNCED BEEF</p><p>17823649</p><p>3</p><p>YES</p><p>7.89</p>
-          <p>PNCK MIX</p><p>10293846</p><p>2</p><p>YES</p><p>4.59</p>
-          <p>YOGURT</p><p>98609352</p><p>10</p><p>NO</p><p>22.99</p>
+          <p>NAME&nbsp;</p>
+          <p>ID#&nbsp;</p>
+          <p>AMNT&nbsp;</p>
+          <p>DSC&nbsp;</p>
+          <p>PRC</p>
+          <p>APPL</p>
+          <p>31240686</p>
+          <p>9</p>
+          <p>NO</p>
+          <p>2.99</p>
+          <p>CRT</p>
+          <p>10465239</p>
+          <p>12</p>
+          <p>NO</p>
+          <p>1.99</p>
+          <p>MARGRN</p>
+          <p>17823649</p>
+          <p>1</p>
+          <p>NO</p>
+          <p>6.29</p>
+          <p>MNCED BEEF</p>
+          <p>17823649</p>
+          <p>3</p>
+          <p>YES</p>
+          <p>7.89</p>
+          <p>PNCK MIX</p>
+          <p>10293846</p>
+          <p>2</p>
+          <p>YES</p>
+          <p>4.59</p>
+          <p>YOGURT</p>
+          <p>98609352</p>
+          <p>10</p>
+          <p>NO</p>
+          <p>22.99</p>
         </div>
       </div>
     </div>
@@ -95,11 +123,11 @@
 
   <section id="recipes" class="">
     <h2 style="text-align: center;">Your Recipes</h2>
-    <div class="recipe-item" id="recipe-template">
-      <h2 class="recipe-name">Title Goes Here</h2>
-      <p>Potatoe, Geed, List, Ogey</p>
-      <span><a class="recipe-url" href="">Let's Cook!</a>&nbsp;(3hrs)</span>
-      <img class="recipe-img" src="assets/rt1.jpg"/>
+    <div class="recipe-item hidden" id="recipe-template">
+      <h2 class="recipe-name"></h2>
+      <p></p>
+      <a class="recipe-url" href="">Let's Cook!</a><span></span>
+      <img class="recipe-img" src="" />
     </div>
   </section>
 
