recipes now display!!!!

--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
     </div>
   </section>
 
-  <section id="recipes" class="">
+  <section id="recipes" class="hidden">
     <h2 style="text-align: center;">Your Recipes</h2>
     <div class="recipe-item hidden" id="recipe-template">
       <h2 class="recipe-name"></h2>
       <p></p>
-      <a class="recipe-url" href="">Let's Cook!</a><span></span>
+      <a class="recipe-url" href="" target="_blank">Let's Cook!</a><span></span>
       <img class="recipe-img" src="" />
     </div>
   </section>
