fixed safari, and rotated image

--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
     </div>
   </section>
 
-  <p id='textbox' class="hidden"></p>
-  <img src="" id="debug-img" style="width: 100%;" />
-  <img src="" id="debug-img2" style="width: 100%;" />
+  <p id='textbox'></p>
 
   <section id="footer">
     <div class="hr"></div>
