--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     <img id="logo" src="assets/logo.svg" />
   </section>
 
+  <div class="row mobile-version">
+    <label class="scan-btn">
+      Scan
+      <input id="camera-inp" type="file" accept="image/*" , capture />
+    </label>
+  </div>
+
   <section id="description">
     <div style="flex: 2">
       <h1>How It Works</h1>
@@ -98,8 +105,8 @@
     </div>
   </section>
 
-  <div class="row">
-    <label id="scan-btn">
+  <div class="row desktop-version">
+    <label class="scan-btn">
       Scan
       <input id="camera-inp" type="file" accept="image/*" , capture />
     </label>
