starting to work in parallel

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <div class="row desktop-version">
     <label class="scan-btn">
-      Scan
+      Scan / Upload
       <input id="camera-inp" type="file" accept="image/*" , capture />
     </label>
   </div>
