--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="index.css" rel="stylesheet" type="text/css" />
   <script src="https://unpkg.com/jimp@0.14.0/browser/lib/jimp.js"></script>
   <script src='https://unpkg.com/tesseract.js@v2.0.0-beta.1/dist/tesseract.min.js'></script>
-  <script src='ocrad.js'></script>
   <script src="build/tsc.js" type="text/javascript"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +24,7 @@
   <div class="row mobile-version">
     <label class="scan-btn">
       Scan
-      <input id="camera-inp" type="file" accept="image/*" , capture />
+      <input class="camera-inp" type="file" accept="image/*" , capture />
     </label>
   </div>
 
@@ -108,7 +107,7 @@
   <div class="row desktop-version">
     <label class="scan-btn">
       Scan / Upload
-      <input id="camera-inp" type="file" accept="image/*" , capture />
+      <input class="camera-inp" type="file" accept="image/*" , capture />
     </label>
   </div>
 
