--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       Scan / Upload
       <input class="camera-inp" type="file" accept="image/*" , capture />
     </label>
+    <div id="loader" class="hidden"></div>
   </div>
 
   <section id="visualizer">
@@ -136,8 +137,6 @@
       <img class="recipe-img" src="" />
     </div>
   </section>
-
-  <p id='textbox'></p>
 
   <section id="footer">
     <div class="hr"></div>
