--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script src="build/tsc.js" type="text/javascript"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="icons/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 
@@ -104,8 +104,8 @@
     </div>
   </section>
 
-  <div class="row desktop-version">
-    <label class="scan-btn">
+  <div class="row">
+    <label class="scan-btn desktop-version">
       Scan / Upload
       <input class="camera-inp" type="file" accept="image/*" , capture />
     </label>
