--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
       Scan / Upload
       <input class="camera-inp" type="file" accept="image/*" , capture />
     </label>
-    <div id="loader" class="hidden"></div>
+    <div id="loader" class="hidden">
+      <p id="loader-text">loading...</p>
+    </div>
   </div>
 
   <section id="visualizer">
