--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         than carbon dioxide. Unlike many climate issues however, food waste is a problem that can and must be solved at
         an individual consumer level. That's where frijma comes in.
       </p>
-      <div class="row" id="demo">
+      <div class="row shown" id="demo">
         <img id="demo-img" src="assets/receipt.png" />
         &rarr;
         <div id="demo-grid">
