--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <h1>Why Frijma</h1>
       <p>
         According to the USDA, it is estimated that nearly 40% of the U.S. food supply is wasted every single year.
-        Aside from the social and humanitarian issues associated with this problem, food waste also contributes to the
-        climate crisis; rotting food in landfills is a major producer of methane, a greenhouse gas 25 times more potent
-        than carbon dioxide. Unlike many climate issues however, food waste is a problem that can and must be solved at
-        an individual consumer level. That's where frijma comes in.
+        Aside from the humanitarian issues associated with this problem, food waste also contributes to the
+        climate crisis; rotting food in landfills is a major producer of methane, a greenhouse gas 25 times more
+        destructive than carbon dioxide. frijma aims to combat this issue at the consumer level, reducing global
+        food waste one receipt at a time.
       </p>
       <button id="show-more-btn">See More</button>
     </div>
