improved table graphic

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <script src="build/tsc.js" type="text/javascript"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300&family=Quicksand:wght@300;400;600&display=swap"
+    rel="stylesheet">
   <link href="icons/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 
@@ -32,21 +34,19 @@
     <div style="flex: 2">
       <h1>Why Frijma</h1>
       <p>
-        According to the USDA, it is estimated that nearly 40% of the U.S. food supply is wasted every single year.
-        Aside from the humanitarian issues associated with this problem, food waste also contributes to the
-        climate crisis; rotting food in landfills is a major producer of methane, a greenhouse gas 25 times more
-        destructive than carbon dioxide. frijma aims to combat this issue at the consumer level, reducing global
+        The USDA, estimates that 40% of the U.S. food supply is wasted every single year. This has social
+        and environmental implications; rotting food in landfills is a major producer of methane—a greenhouse gas
+        25x more destructive than carbon dioxide. Frijma combats this issue at the consumer level, reducing global
         food waste one receipt at a time.
       </p>
       <button id="show-more-btn">See More</button>
     </div>
-    <div style="flex: 3; position: relative;">
+    <div style="flex: 2; position: relative;">
       <h1>How It Works</h1>
       <p>
-        By combining image preprocessing, computer vision, clever algorithms to reconstruct words from abbreviations,
-        and U.S. government food keeping data, frijma is able to parse any receipt and help users visualize data about
-        their food. Our app can then provide recipes that specifically target the food the user already has, so there is
-        no need to go out to the store and buy more when perfectly usable food is available at home!
+        Using U.S. government food expiration data, computer vision, image processing, clever parsing algorithms,
+        and intuitive visuals, frijma allows the user to scan a receipt with their phone camera, keep track of expiration
+        dates, and efficiently plan meals.
       </p>
       <div class="row shown" id="demo">
         <img id="demo-img" src="assets/receipt.png" />
