logo update, recipe display bug fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </section>
 
   <div class="row mobile-version">
-    <label class="scan-btn">
+    <label class="scan-btn" tabindex="0">
       Scan
       <input class="camera-inp" type="file" accept="image/*" , capture />
     </label>
@@ -105,7 +105,7 @@
   </section>
 
   <div class="row">
-    <label class="scan-btn desktop-version">
+    <label class="scan-btn desktop-version" tabindex="0">
       Scan / Upload
       <input class="camera-inp" type="file" accept="image/*" , capture />
     </label>
