--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div style="flex: 2">
       <h1>Why Frijma</h1>
       <p>
-        The USDA, estimates that 40% of the U.S. food supply is wasted every single year. This has social
+        The USDA estimates that 40% of the U.S. food supply is wasted every single year. This has social
         and environmental implications; rotting food in landfills is a major producer of methane—a greenhouse gas
         25x more destructive than carbon dioxide. Frijma combats this issue at the consumer level, reducing global
         food waste one receipt at a time.
