visual improvements (foods bg)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+  <img src="assets/foods_bg.svg" id="foods-bg"/>
+
   <section id="header">
     <img id="logo" src="assets/logo.svg" />
   </section>
@@ -42,8 +44,8 @@
       <button id="show-more-btn">See More</button>
     </div>
     <div style="flex: 2; position: relative;">
-      <h1>How It Works</h1>
-      <p>
+      <h1 class="show-more-section">How It Works</h1>
+      <p class="show-more-section">
         Using U.S. government food expiration data, computer vision, image processing, clever parsing algorithms,
         and intuitive visuals, frijma allows the user to scan a receipt with their phone camera, keep track of expiration
         dates, and efficiently plan meals.
